--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
+    "multer": "^1.4.4-lts.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
